fix(plural): remove plurals from titles
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ enableGitInfo           = true
 preserveTaxonomyNames   = true
 nextSummerYear          = 2022
 #disableKinds            = ["taxonomy"]
+pluralizelisttitles     = false
 
 # Define the number of posts per page
 paginate = 10
