--- a/data/schedule/days/days_next_summit.yaml
+++ b/data/schedule/days/days_next_summit.yaml
@@ -1,24 +1,31 @@
-day-16:
-  date : "9th"
+day-20:
+  date : "7th"
   day  : "Monday"
-  month: "November"
+  month: "December"
   key  : "Mon"
   order: 1
-day-17:
-  date : "10th"
+day-21:
+  date : "8th"
   day  : "Tuesday"
-  month: "November"
+  month: "December"
   key  : "Tue"
   order: 2
-day-18:
-  date : "11th"
+day-22:
+  date : "9th"
   day  : "Wednesday"
-  month: "November"
+  month: "December"
   key  : "Wed"
   order: 3
-day-19:
-  date : "12th"
+day-23:
+  date : "10th"
   day  : "Thursday"
-  month: "November"
+  month: "December"
   key  : "Thu"
   order: 4
+day-24:
+  date : "11th"
+  day  : "Friday"
+  month: "December"
+  key  : "Fri"
+  order: 5
+
