--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -74,6 +74,7 @@ day-15:
   key : "Fri"
   order: 15
 
+# Dec 2020Mini-Summit
 day-16:
   date : "9th"
   day  : "Monday"
@@ -98,3 +99,36 @@ day-19:
   month: "November"
   key  : "Thu"
   order: 4
+
+# Jan 2021 Mini-Summit
+day-20:
+  date : "7th"
+  day  : "Monday"
+  month: "December"
+  key  : "Mon"
+  order: 1
+day-21:
+  date : "8th"
+  day  : "Tuesday"
+  month: "December"
+  key  : "Tue"
+  order: 2
+day-22:
+  date : "9th"
+  day  : "Wednesday"
+  month: "December"
+  key  : "Wed"
+  order: 3
+day-23:
+  date : "10th"
+  day  : "Thursday"
+  month: "December"
+  key  : "Thu"
+  order: 4
+day-24:
+  date : "11th"
+  day  : "Friday"
+  month: "December"
+  key  : "Fri"
+  order: 5
+
