Added April's Summit

--- a/data/schedule/next_event.yaml
+++ b/data/schedule/next_event.yaml
@@ -1,7 +1,7 @@
-title: 'Mini Summit (8th - 12th March 2021)'
+title: 'Next Summit: 12th - 16th April 2021'
 year : 2021
 event: mini-summit
-month: Mar
+month: Apr
 days :
   - Mon
   - Tue
