--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -161,4 +161,33 @@ day-29:
   month: "January"
   key  : "Fri"
   order: 5
-
+day-30:
+  date : "8th"
+  day  : "Monday"
+  month: "March"
+  key  : "Mon"
+  order: 1
+day-31:
+  date : "9th"
+  day  : "Tuesday"
+  month: "March"
+  key  : "Tue"
+  order: 2
+day-32:
+  date : "10th"
+  day  : "Wednesday"
+  month: "March"
+  key  : "Wed"
+  order: 3
+day-33:
+  date : "11th"
+  day  : "Thursday"
+  month: "March"
+  key  : "Thu"
+  order: 4
+day-34:
+  date : "12th"
+  day  : "Friday"
+  month: "March"
+  key  : "Fri"
+  order: 5
