Added number of sessions for the OSS in May

--- a/data/videos/list.yaml
+++ b/data/videos/list.yaml
@@ -508,7 +508,7 @@
   session: training
 -
   video: GbYwXCGVcGE
-  author: Diniz Cruz
+  author: Dinis Cruz
   description: Incident Response scenario planning
   date: 3 Jun 2020
   session: training
