--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -191,3 +191,33 @@ day-34:
   month: "March"
   key  : "Fri"
   order: 5
+day-35:
+  date : "10th"
+  day  : "Monday"
+  month: "May"
+  key  : "Mon"
+  order: 1
+day-36:
+  date : "11th"
+  day  : "Tuesday"
+  month: "May"
+  key  : "Tue"
+  order: 2
+day-37:
+  date : "12th"
+  day  : "Wednesday"
+  month: "May"
+  key  : "Wed"
+  order: 3
+day-38:
+  date : "13th"
+  day  : "Thursday"
+  month: "May"
+  key  : "Thu"
+  order: 4
+day-39:
+  date : "14th"
+  day  : "Friday"
+  month: "May"
+  key  : "Fri"
+  order: 5
