--- a/config.toml
+++ b/config.toml
@@ -16,24 +16,31 @@ paginate = 10
 [menu]
 
 [[menu.main]]
+    name = "Projects"
+    identifier = "projects"
+    pre = "<i class='fa fa-road'></i>&nbsp;"
+    weight = 10
+    url = "/projects"
+
+[[menu.main]]
     name = "Schedule"
     identifier = "schedule"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 2
+    weight = 20
 #    parent = "sessions"
     url = "/schedule"
 [[menu.main]]
     name = "Tracks"
     identifier = "tracks"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 3
+    weight = 30
     url = "/tracks/"
 
 [[menu.main]]
     name = "Past Summits"
     identifier = "past-summits"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 5
+    weight = 40
 
 [[menu.main]]
     name = "May 2021"
@@ -94,7 +101,7 @@ paginate = 10
     name = "About"
     identifier = "about"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 10
+    weight = 50
     url = "/about/"
 [[menu.main]]
     name = "The Summit"
