--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,13 @@ name: test syntax
 on:
   pull_request:
     branches:
-    - master
+    - main
 
 jobs:
   syntax-check:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
