--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -281,3 +281,33 @@ day-49:
   month: "Sep"
   key  : "Fri"
   order: 5
+day-50:
+  date : "8th"
+  day  : "Monday"
+  month: "Nov"
+  key  : "Mon"
+  order: 1
+day-51:
+  date : "9th"
+  day  : "Tuesday"
+  month: "Nov"
+  key  : "Tue"
+  order: 2
+day-52:
+  date : "10th"
+  day  : "Wednesday"
+  month: "Nov"
+  key  : "Wed"
+  order: 3
+day-53:
+  date : "11th"
+  day  : "Thursday"
+  month: "Nov"
+  key  : "Thu"
+  order: 4
+day-54:
+  date : "12th"
+  day  : "Friday"
+  month: "Nov"
+  key  : "Fri"
+  order: 5
