--- a/config.toml
+++ b/config.toml
@@ -51,6 +51,14 @@ paginate = 10
     weight = 40
 
 [[menu.main]]
+    name = "Nov 2021"
+    identifier = "event-nov-2021"
+    parent = "past-summits"
+    pre = "<i class='fa fa-road'></i>&nbsp;"
+    weight = 38
+    url = "/sessions/2021/mini-summits/nov/"
+
+[[menu.main]]
     name = "Sep 2021"
     identifier = "event-sep-2021"
     parent = "past-summits"
