--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -311,3 +311,33 @@ day-54:
   month: "Nov"
   key  : "Fri"
   order: 5
+day-55:
+  date : "10th"
+  day  : "Monday"
+  month: "Jan"
+  key  : "Mon"
+  order: 1
+day-56:
+  date : "11th"
+  day  : "Tuesday"
+  month: "Jan"
+  key  : "Tue"
+  order: 2
+day-57:
+  date : "12th"
+  day  : "Wednesday"
+  month: "Jan"
+  key  : "Wed"
+  order: 3
+day-58:
+  date : "13th"
+  day  : "Thursday"
+  month: "Jan"
+  key  : "Thu"
+  order: 4
+day-59:
+  date : "14th"
+  day  : "Friday"
+  month: "Jan"
+  key  : "Fri"
+  order: 5
