staring to add support for Agnolia search in OSS site

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,3 +26,10 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
         publish_branch: gh-pages
+
+    - name: Update Agnolia
+      run: |
+        pwd
+        ls -la
+        ls -la .public
+
