added back npm install

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         #pwd
         #ls -la
         #ls -la ./public
-        #npm install atomic-algolia
+        npm install atomic-algolia
         #ls -la node_modules/.bin
         ./node_modules/.bin/atomic-algolia
 
