--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
+    env:
+      ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+      ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
+      ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
+      ALGOLIA_INDEX_FILE: ${{ secrets.ALGOLIA_INDEX_FILE }}
+
     steps:
     - uses: actions/checkout@main
 
@@ -29,10 +35,6 @@ jobs:
 
     - name: Update Agnolia
       run: |
-        #pwd
-        #ls -la
-        #ls -la ./public
         npm install atomic-algolia
-        #ls -la node_modules/.bin
         ./node_modules/.bin/atomic-algolia
 
