Updating to May dates

--- a/config.toml
+++ b/config.toml
@@ -58,11 +58,20 @@ paginate = 10
     weight = 40
 
 [[menu.main]]
+    name = "Mar 2022"
+    identifier = "event-mar-2022"
+    parent = "past-summits"
+    pre = "<i class='fa fa-road'></i>&nbsp;"
+    weight = 35
+    url = "/sessions/2022/mini-summits/mar/"
+
+
+[[menu.main]]
     name = "Jan 2022"
     identifier = "event-jan-2022"
     parent = "past-summits"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 37
+    weight = 36
     url = "/sessions/2022/mini-summits/jan/"
 
 [[menu.main]]
@@ -70,7 +79,7 @@ paginate = 10
     identifier = "event-nov-2021"
     parent = "past-summits"
     pre = "<i class='fa fa-road'></i>&nbsp;"
-    weight = 38
+    weight = 37
     url = "/sessions/2021/mini-summits/nov/"
 
 [[menu.main]]
