--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -341,3 +341,33 @@ day-59:
   month: "Jan"
   key  : "Fri"
   order: 5
+day-60:
+  date : "14th"
+  day  : "Monday"
+  month: "Mar"
+  key  : "Mon"
+  order: 1
+day-61:
+  date : "15th"
+  day  : "Tuesday"
+  month: "Mar"
+  key  : "Tue"
+  order: 2
+day-62:
+  date : "16th"
+  day  : "Wednesday"
+  month: "Mar"
+  key  : "Wed"
+  order: 3
+day-63:
+  date : "17th"
+  day  : "Thursday"
+  month: "Mar"
+  key  : "Thu"
+  order: 4
+day-64:
+  date : "18th"
+  day  : "Friday"
+  month: "Mar"
+  key  : "Fri"
+  order: 5
