--- a/data/schedule/days/days_past.yaml
+++ b/data/schedule/days/days_past.yaml
@@ -371,3 +371,34 @@ day-64:
   month: "Mar"
   key  : "Fri"
   order: 5
+
+day-65:
+  date : "9h"
+  day  : "Monday"
+  month: "May"
+  key  : "Mon"
+  order: 1
+day-66:
+  date : "10th"
+  day  : "Tuesday"
+  month: "May"
+  key  : "Tue"
+  order: 2
+day-67:
+  date : "11th"
+  day  : "Wednesday"
+  month: "May"
+  key  : "Wed"
+  order: 3
+day-68:
+  date : "12th"
+  day  : "Thursday"
+  month: "May"
+  key  : "Thu"
+  order: 4
+day-69:
+  date : "13th"
+  day  : "Friday"
+  month: "May"
+  key  : "Fri"
+  order: 5
