--- a/data/schedule/days/times.yaml
+++ b/data/schedule/days/times.yaml
@@ -1,3 +1,4 @@
+# for online event
 - KN-0
 - KN-1
 - WS-1
@@ -34,9 +35,3 @@
 - WS-20-21
 - WS-20+-21+
 - WS-22-23
-- WS-14_00-15_15
-- WS-15_30-16_45
-- WS-17_45-19_00
-- WS-19_15-20_30
-- WS-20_45-22_00
-
